force-app/main/default/objects/patient1__c/patient1__c.object-meta.xml
<CustomObject>
    <label>patient1</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>patients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>