force-app/main/default/objects/patient1__c/fields/bloodUrea__c.field-meta.xml
<CustomField>
    <fullName>bloodUrea__c</fullName>
    <label>bloodUrea</label>
    <length>20</length>
    <type>Text</type>
</CustomField>