force-app/main/default/objects/patient1__c/fields/bsl__c.field-meta.xml
<CustomField>
    <fullName>bsl__c</fullName>
    <label>bsl</label>
    <length>20</length>
    <type>Text</type>
</CustomField>