force-app/main/default/objects/patient1__c/fields/consultant__c.field-meta.xml
<CustomField>
    <fullName>consultant__c</fullName>
    <label>consultant</label>
    <length>100</length>
    <type>Text</type>
</CustomField>