force-app/main/default/objects/patient1__c/fields/delFlag__c.field-meta.xml
<CustomField>
    <fullName>delFlag__c</fullName>
    <label>delFlag</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>