force-app/main/default/objects/patient1__c/fields/dob__c.field-meta.xml
<CustomField>
    <fullName>dob__c</fullName>
    <label>dob</label>
    <length>50</length>
    <type>Text</type>
</CustomField>