force-app/main/default/objects/patient1__c/fields/emailId__c.field-meta.xml
<CustomField>
    <fullName>emailId__c</fullName>
    <label>emailId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>