force-app/main/default/objects/patient1__c/fields/height__c.field-meta.xml
<CustomField>
    <fullName>height__c</fullName>
    <label>height</label>
    <length>20</length>
    <type>Text</type>
</CustomField>