force-app/main/default/objects/patient1__c/fields/landlineNo__c.field-meta.xml
<CustomField>
    <fullName>landlineNo__c</fullName>
    <label>landlineNo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>