force-app/main/default/objects/patient1__c/fields/mobileNo__c.field-meta.xml
<CustomField>
    <fullName>mobileNo__c</fullName>
    <label>mobileNo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>