force-app/main/default/objects/patient1__c/fields/newPatientDate__c.field-meta.xml
<CustomField>
    <fullName>newPatientDate__c</fullName>
    <label>newPatientDate</label>
    <type>Date</type>
</CustomField>