force-app/main/default/objects/patient1__c/fields/occupation__c.field-meta.xml
<CustomField>
    <fullName>occupation__c</fullName>
    <label>occupation</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>