force-app/main/default/objects/patient1__c/fields/patientId__c.field-meta.xml
<CustomField>
    <fullName>patientId__c</fullName>
    <label>patientId</label>
    <length>200</length>
    <type>Text</type>
</CustomField>