force-app/main/default/objects/patient1__c/fields/patientName__c.field-meta.xml
<CustomField>
    <fullName>patientName__c</fullName>
    <label>patientName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>