force-app/main/default/objects/patient1__c/fields/pottasium__c.field-meta.xml
<CustomField>
    <fullName>pottasium__c</fullName>
    <label>pottasium</label>
    <length>20</length>
    <type>Text</type>
</CustomField>