force-app/main/default/objects/patient1__c/fields/refById__c.field-meta.xml
<CustomField>
    <fullName>refById__c</fullName>
    <label>refById</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>