force-app/main/default/objects/patient1__c/fields/sex__c.field-meta.xml
<CustomField>
    <fullName>sex__c</fullName>
    <label>sex</label>
    <length>20</length>
    <type>Text</type>
</CustomField>