force-app/main/default/objects/patient1__c/fields/sodium__c.field-meta.xml
<CustomField>
    <fullName>sodium__c</fullName>
    <label>sodium</label>
    <length>20</length>
    <type>Text</type>
</CustomField>