force-app/main/default/objects/patient1__c/fields/srCreatine__c.field-meta.xml
<CustomField>
    <fullName>srCreatine__c</fullName>
    <label>srCreatine</label>
    <length>20</length>
    <type>Text</type>
</CustomField>