force-app/main/default/objects/patient1__c/fields/urine__c.field-meta.xml
<CustomField>
    <fullName>urine__c</fullName>
    <label>urine</label>
    <length>20</length>
    <type>Text</type>
</CustomField>