force-app/main/default/objects/patient1__c/fields/weight__c.field-meta.xml
<CustomField>
    <fullName>weight__c</fullName>
    <label>weight</label>
    <length>20</length>
    <type>Text</type>
</CustomField>